# betnew

./: Cargo.toml
migrations/: 001_initial.sql
src/: lib.rs  main.rs
src/api/: routes.rs
src/api/handlers/: predictions.rs
src/core/models/: mod.rs  user.rs
src/core/services/: scoring.rs
