[package]
name = "betnew"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls"] }
sea-orm = "1.1.19" # Optional: for more complex ORM needs
redis = { version = "0.23", features = ["tokio-comp"] }

# Web Framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"
argon2 = "0.5"

# Serialization/Validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
