[package]
name = "betnew"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls"] }
sea-orm = "1.1.19" # Optional: for more complex ORM needs
redis = { version = "0.23", features = ["tokio-comp"] }

# Web Framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"
argon2 = "0.5"

# Serialization/Validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Real-time
tokio-tungstenite = "0.20"
# or for Actix: actix-web-actors

# Testing
tokio-test = "0.4"
mockall = "0.11"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }